[package]
name = "contact_form_rest_endpoint_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version="0.4.5", features=["json","tower-log"] }
tracing = "0.1"
tracing-subscriber = { version="0.3", features = ["env-filter"] }
tower-http = { version = "0.2.0", features = ["trace"] }
tokio = { version = "1.16.1", features = ["full"] }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.48"
dotenv = "*"
http-types = "*"
lettre = { version = "0.10.0-rc.4", features = ["smtp-transport", "tokio1-native-tls"] }
